# prismer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
prismer/: __init__.py  cli.py
prismer/commands/: engine.py
prismer/db/: db.py  models.py  version.py
prismer/repo/: version.py
prismer/utils/: __init__.py  dirs.py  init.py
