[project]
name = "prism-engine-tools"
version = "0.1.0"
description = "Tools for efficient work with PrismEngine. Includes prismer — a command-line interface (CLI) tool designed to manage versions of the PrismEngine engine and projects built on it."
license = {text = "MIT"}
authors = [
    {name = "Aleksei-Kutuzov",email = "allekskutuzov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
packages = [
    { include = "prismer" }
]

[tool.poetry.dependencies]
python = ">=3.13"
typer = ">=0.24.0,<0.25.0"
sqlalchemy = ">=2.0.46,<3.0.0"
platformdirs = ">=4.9.2,<5.0.0"
urllib3 = ">=2.6.3,<3.0.0"

[project.scripts]
prismer = "prismer.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
PrismEngine = "https://github.com/ThePrismEngine/PrismEngine"